# MNISTTest

./: CMakeLists.txt  Decoder.cpp  Decoder.h  main.cpp
NeuralNetwork/: Connection.cpp  Connection.h  InputNeuron.cpp  InputNeuron.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.h  WorkingNeuron.cpp  WorkingNeuron.h
NeuralNetwork/ActivationFunctions/: ActivationFunction.cpp  ActivationFunction.h
